@@ -1,14 +1,14 @@
 name    = cPanel-TaskQueue
-version = 0.606
+version = 0.700
 author  = cPanel, Inc. <cpan@cpanel.net>
 license = Perl_5
 copyright_holder = cPanel, Inc.
 
 [@Basic]
 
-[ModuleBuild]
-[DualBuilders]
-prefer = make
+;[ModuleBuild]
+;[DualBuilders]
+;prefer = make
 [PkgVersion]
 [NextRelease]
 [PodSyntaxTests]
