@@ -5,7 +5,7 @@ cPanel::TaskQueue::PluginManager - Supplies support for loading the Queue task p
 
 =head1 VERSION
 
-This document describes C<cPanel::TaskQueue::PluginManager> version 0.606.
+This document describes C<cPanel::TaskQueue::PluginManager> version 0.700.
 
 =head1 SYNOPSIS
 
