@@ -5,7 +5,7 @@ cPanel::TaskQueue::Processor - Processes an individual task from the cPanel::Tas
 
 =head1 VERSION
 
-This document describes cPanel::TaskQueue::Processor version 0.606.
+This document describes cPanel::TaskQueue::Processor version 0.700.
 
 =head1 SYNOPSIS
 
