@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-# Test the cPanel::TaskQueue module.
+# Test the cPanel::TaskQueue::Scheduler module.
 #
 # This tests the code for handling long-running processes. Since it is, by
 #  necessity, slower to execute than we probably want to run as a normal
@@ -9,49 +9,23 @@
 
 
 use strict;
+use warnings;
 use FindBin;
 use lib "$FindBin::Bin/mocks";
-use File::Path ();
+use File::Temp;
 
 use Test::More tests => 18;
+use Test::Exception;
 use cPanel::TaskQueue::Scheduler;
 
-my $tmpdir = './tmp';
-my $statedir = "$tmpdir/statedir";
-
-{
-    package MockQueue;
-
-    sub new {
-        return bless [];
-    }
-
-    sub queue_task {
-        my ($self, $task) = @_;
-
-        push @{$self}, $task;
-        return 1;
-    }
-
-    sub clear_tasks {
-        my ($self) = @_;
-        @{$self} = ();
-        return;
-    }
-
-    sub get_tasks {
-        my ($self) = @_;
-        return @{$self};
-    }
-}
+use MockQueue;
 
 SKIP:
 {
     skip 'Long running tests not enabled.', 15 unless $ENV{CPANEL_SLOW_TESTS};
 
-    # In case the last test did not succeed.
-    cleanup();
-    File::Path::mkpath( $statedir );
+    my $tmpdir = File::Temp->newdir();
+    my $statedir = "$tmpdir/statedir";
 
     my $sched = cPanel::TaskQueue::Scheduler->new( { name => 'tasks', state_dir => $statedir } );
     isa_ok( $sched, 'cPanel::TaskQueue::Scheduler', 'Correct object built.' );
@@ -91,26 +65,15 @@ SKIP:
         'All correct tasks.'
     );
     $q->clear_tasks();
-
-    cleanup();
 }
 
 {
-    File::Path::mkpath( $statedir );
+    my $tmpdir = File::Temp->newdir();
+    my $statedir = "$tmpdir/statedir";
 
     my $sched = cPanel::TaskQueue::Scheduler->new( { name => 'tasks', state_dir => $statedir } );
     ok( $sched->schedule_task( 'noop 0', {at_time=>time} ), 'command scheduled for now.' );
 
-    eval { $sched->process_ready_tasks(); };
-    like( $@, qr/No valid queue/, 'do not process with missing queue' );
-
-    eval { $sched->process_ready_tasks( {} ); };
-    like( $@, qr/No valid queue/, 'do not process with non-queue' );
-
-    cleanup();
-}
-
-# Clean up after myself
-sub cleanup {
-    File::Path::rmtree( $tmpdir ) if -d $tmpdir;
+    throws_ok { $sched->process_ready_tasks(); } qr/No valid queue/, 'do not process with missing queue';
+    throws_ok { $sched->process_ready_tasks( {} ); } qr/No valid queue/, 'do not process with non-queue';
 }
